--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,22 +59,13 @@ jobs:
         rsync -e "ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null" -avz --exclude='.git' --exclude='node_modules' ./ ubuntu@18.117.252.235:/home/ubuntu/project_tmp/
     - name: Move and Mount Files
       run: |
-        echo "Private IP: $PRIVATE_IP"
         ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null ubuntu@18.117.252.235 "\
         sudo mkdir -p /mnt/efs && \
-        export ATTEMPTS=0
-        while true; do
-         if [[ \$ATTEMPTS -ge 18 ]]; then
-           echo 'Mount operation failed after 3 minutes, exiting...'
-           exit 1
-         fi
-        if sudo mount -t nfs -o nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2 \$PRIVATE_IP:/ /mnt/efs; then
-          echo 'Mount operation succeeded!'
-          break
+        sleep 30 && \ 
+        if sudo mount -t nfs -o nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2 $PRIVATE_IP:/ /mnt/efs; then
+          sudo mv /home/ubuntu/project_tmp/* /mnt/efs/
         else
-          echo 'Mount operation failed, waiting 10 seconds before retrying...'
-          let ATTEMPTS=ATTEMPTS+1
-          sleep 10
-        fi
-        done && \
-        sudo mv /home/ubuntu/project_tmp/* /mnt/efs/"
+          echo 'Mount command failed.'
+          exit 1
+        fi"
+
