--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,5 +67,7 @@ jobs:
         else
           echo 'Mount command failed.'
           exit 1
-        fi"
+        fi
+        cd mnt/efs && npm install && pm2 restart index.js --name application-test -f && sudo systemctl restart apache2
+        "
 
